Version next
* Updated translations for: bg-BG, da, de, dsb, el, eo, es-ES, fr, he, hsb, ja-JP, nb-NO, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW

Version 2014.06.01.03b
* Fix download status implementation to be compatible with Firefox 29.
* Fix localization issues. (Australis)
* Improved customization event handling. (Australis)
* Support opening download manager with in-tab UI.
* Support 3rd Party download managers by exposing "status4evar.download.button.action.command" which defines a command name to execute.
* Minimize location bar progress when the location bar is focused.
* Updated translations for: da, de, dsb, el, eo, es-ES, fr, hsb, ja-JP, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW

Version 2014.05.03.06
* Fix download button icon styles. (Australis)
* Fix Windows and Linux status bar styles. OS X Still needs work. (Australis)
* Support legacy status bar panel. (Australis)

Version 2014.04.27.21
* Fix toolbars overlapping download finished animation.
* Australis style fixes.
* Australis first-run widget migration.
* Updated translations for: zh-CN

Version 2014.02.18.00b
* Improve fullscreen HTML5 video detection (fix on YouTube).
* Update license to MPL 2.0.
* Update locales for new strings.
* Updated translations for: sr

Version 2014.01.29.16b
* Add advanced option to hide status popup on fullscreen HTML5 video.
* Fix JS Download API integration.
* Fix status/add-on bar item placement regression from Australis support.
* Updated translations for: ro

Version 2014.01.25.23b
* Initial Australis support.
* Drop support for Firefox 23.0 and older.
* Classic download manager is not available in Firefox 26.0 and newer.

Version 2013.10.31.22
* Updated translations for: es-ES, he

Version 2013.09.14.22b
* Don't use Firefox 22 JavaScript syntax in new Downloads implementation.

Version 2013.09.14.15b
* Support new Downloads.jsm API in Firefox 26+.
* Support UI changes in Firefox 26.
* Update locales for new strings.
* Updated translations for: en-US, pl, sr
